Fixes silly button jumping.

--- a/_sass/media/_screen.scss
+++ b/_sass/media/_screen.scss
@@ -342,6 +342,7 @@ div[role="main"] {
       background-color: rgba(0,0,0,0.1);
       color: #fff;
       color: rgba(255,255,255,0.8);
+      border:none;
       padding: 0 rhythm(0.75);
       display:block; float:left;
       margin-right: 0.25em;
